app/assets/stylesheets/main.css
head {
	width: 100%;
}

.footbar{
	text-align: left;
	position: fixed;
	bottom: 0;
	left:0
}

li {
	font-size: 13px;
}

a {
	color: aliceblue !important;
}

#over {
	z-index: 10;
}

.lighten{
	background-color: white;
	z-index: 1000;
	width: 100%;
	height: 100%;
}
@media (min-width: 1400px) {
  .title{
	color: aliceblue;
	margin-top: 15%;
	margin-left: 25%;
	width: 100%;
	text-align: center;
	font-family: lato, sans-serif;
	font-weight: 200;
	font-size: 200px;
}
}

@media (max-width: 1400px) {
  .title{
	color: aliceblue;
	margin-top: 15%;
	width: 100%;
	text-align: center;
	font-family: lato, sans-serif;
	font-weight: 200;
	font-size: 200px;
}
}

body{
	/*background:url(http://i.imgur.com/lGjlXUF.gif)no-repeat;*/
	background:url(http://i.imgur.com/AU8lTBE.gif) fixed right top;
}

@media (max-width: 1400px) {
	body{
	background-size: cover !important;
}
}


.main-content {
	padding-top:5%;
}

.input-group-addon{
	color: black;
	font-family: Arial, Helvetica, sans-serif;
	line-height: 18px;
	font-weight: bold;
}

.error{
	color: red;
	font-size: 14px;
	font-family: Arial, Helvetica, sans-serif;
    line-height: 18px;
    font-weight: bold;
}

.tag {
	color: blue;
}

.form{
	opacity: 0.9;
	box-shadow: rgba(0,0,0,0.2) 0px 2px 3px, inset rgba(0,0,0,0.2) 0px -1px 2px;
	border-radius: 25px;
	margin-left: 27%;
	/*height:300px;*/
	width: 500px;
	padding:30px;
}

.profile-pic {
	box-shadow: rgba(0,0,0,0.2) 0px 2px 3px, inset rgba(0,0,0,0.2) 0px -1px 2px;
	border-radius: 25px;
	/*background: url(http://i.imgur.com/VJeDMMe.jpg) no-repeat fixed;*/
	float: left;
	word-wrap: break-word;
	/*margin-left: 27%;*/
	/*height:300px;*/
	width: 40%;
	padding:30px;	
}

.profile-info {
	opacity: 0.9;
	box-shadow: rgba(0,0,0,0.2) 0px 2px 3px, inset rgba(0,0,0,0.2) 0px -1px 2px;
	border-radius: 25px;
	float: right;
	word-wrap: break-word;
	/*margin-left: 27%;*/
	/*height:300px;*/
	width: 55%%;
	padding:30px;
}

.test {
	opacity: 0.9;
	box-shadow: rgba(0,0,0,0.2) 0px 2px 3px, inset rgba(0,0,0,0.2) 0px -1px 2px;
	border-radius: 25px;
	width: 100%;
	padding:30px;
}


.navbar-default {
	max-height: 100px;
	position: fixed;
	padding-left: 30px;
	padding-right: 30px;
	background: linear-gradient(to bottom, rgba(35, 33, 51, 1),  rgba(12, 133, 200, 0));
	color: white;
	z-index: 100;
	/*position: fixed;*/
}

.navbar-brand {
	color: aliceblue !important;
}

.navbar-nav {
	color: white;
}

.dropdown-toggle {
	color: white;
}

.dropdown-toggle :active :hover :focus{
	background-color: red;
}

.dropdown-menu {
	background-color: teal;
}

